--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 												
 												<li><a href="#portfolio">Portfolio</a></li>
 												<li><a href="#price">Price</a></li>
-												<li><a href="#contact">Contact us</a></li>
+												<li><a href="#contact">Contact us here</a></li>
 											</ul>
 										</div>
 
